döviz sayfası yapıldı

--- a/anasayfa/index.html
+++ b/anasayfa/index.html
@@ -15,9 +15,9 @@
                 <i class="fa-solid fa-xmark"></i>
             </div>
             <ul class="menu">
-                <li><a href="döviz.html"> Döviz Çevirisi </a></li>
-                <li><a href="accordion.html"> Accordion Project </a></li>
-                <li><a href="weather.html"> Hava Sıcaklığı Dönüştürücü </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\döviz_page1\döviz.html"> Döviz Çevirisi </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\accordion_page3\accordion.html"> Accordion Project </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\weather_page2\weather.html"> Hava Sıcaklığı Dönüştürücü </a></li>
             </ul>
         </div>
         
