--- a/accordion_page3/accordion.html
+++ b/accordion_page3/accordion.html
@@ -2,16 +2,76 @@
 <html>
     <head>
         <title> Accordion Projesi </title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style3.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
     <body>
-        <a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\anasayfa\index.html"> Anasayfa </a>
+        <div class="tab">
 
+            <div class="acor">
+                <div class="baslık">
+                    <h2> Proje Tanıtımı </h2>
+                    <button class="acorButton">
+                        <span class="plusIcon">
+                            <i class="fa fa-plus"></i>
+                        </span>
+                        <span class="minusIcon active">
+                            <i class="fa fa-minus"></i>
+                        </span>
+                    </button>
+                </div>
+                <hr class="cizgi">
+                <div class="iç active">
+                    <p> Projemin bu sayfasında bir akordion şeklinde web sayfalarında çok kullanılan hakkımızda vizyonumuz iletişim gibi bilgileri içeren kısmı yapmak istedim. Javascript css html kullandım. Genel diğer sayfalar dahil bu projeyi javascript bilgilerimi geliştirmek için ortak oluşturduğum küçük birkaç projeyi birleştirip böyle bir döküman yapmak istedim.  </p>
 
+                </div>
+            </div>
 
+            <div class="acor">
+                <div class="baslık">
+                    <h2> Hakkımda </h2>
+                    <button class="acorButton">
+                        <span class="plusIcon">
+                            <i class="fa fa-plus"></i>
+                        </span>
+                        <span class="minusIcon active">
+                            <i class="fa fa-minus gizli"></i>
+                        </span>
+                    </button>
+                </div>
+                <hr class="cizgi">
+                <div class="iç active">
+                    <p> İstanbul Nişantaşı Üniversitesi'nde yazılım mühendisliği son sınıf öğrencisiyim. Öğrenmeye açık ve istekliyim ve aynı zamanda bir takımda çalışmaya uyum sağlayabiliyorum. Front-end geliştirme ile ilgileniyorum. Bu konular hakkında daha fazla çalışmaktan zevk alıyorum. Çalışmaya ve öğrenmeye oldukça istekliyim. Kendi mesleğimin yanı sıra Türkiye Basketbol Federasyonu'nda basketbol hakemi olarak çalışıyorum. Bu ek iş bana takım çalışması, hızlı ve etkili karar verme ve daha birçok beceri kazandırdı. </p>
+                    
+                </div>
+            </div>
 
+            <div class="acor">
+                <div class="baslık">
+                    <h2> İletişim </h2>
+                    <button class="acorButton">
+                        <span class="plusIcon">
+                            <i class="fa fa-plus"></i>
+                        </span>
+                        <span class="minusIcon active">
+                            <i class="fa fa-minus gizli"></i>
+                        </span>
+                    </button>
+                </div>
+                <hr class="cizgi">
+                <div class="iç active">
+                    <p> Mail: bolukbasi.beril1@gmail.com </p>
+                    <p> Tel: (+90) 505 975 86 23 </p>
+                    <p> Linkedin: <a href="https://www.linkedin.com/in/beril-bölükbaşı-bb6155233"> Linkedin hesabım için tıklayınız. </a> </p>
+                    <p> Github: <a href="https://github.com/Berilblks"> Github için tıklayınız. </a> </p>
+                </div>
+            </div>
+        </div>
 
-        <script src="script.js"></script>
+        <div class="anasayfa">
+            <a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\anasayfa\index.html"> Anasayfa </a>
+        </div>
+        <script src="script3.js"></script>
     </body>
 </html>
