--- a/accordion_page3/accordion.html
+++ b/accordion_page3/accordion.html
@@ -4,11 +4,24 @@
         <title> Accordion Projesi </title>
         <link rel="stylesheet" href="style3.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </head>
     <body>
+        <div class="bar">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+        <div class="sidebar">
+            <div class="close">
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+            <ul class="menu">
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\döviz_page1\döviz.html"> Döviz Çevirisi </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\accordion_page3\accordion.html"> Accordion Project </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\weather_page2\weather.html"> Hava Sıcaklığı Dönüştürücü </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\anasayfa\index.html"> Anasayfa </a></li>
+            </ul>
+        </div>
         <div class="tab">
-
             <div class="acor">
                 <div class="baslık">
                     <h2> Proje Tanıtımı </h2>
@@ -24,10 +37,8 @@
                 <hr class="cizgi">
                 <div class="iç active">
                     <p> Projemin bu sayfasında bir akordion şeklinde web sayfalarında çok kullanılan hakkımızda vizyonumuz iletişim gibi bilgileri içeren kısmı yapmak istedim. Javascript css html kullandım. Genel diğer sayfalar dahil bu projeyi javascript bilgilerimi geliştirmek için ortak oluşturduğum küçük birkaç projeyi birleştirip böyle bir döküman yapmak istedim.  </p>
-
                 </div>
             </div>
-
             <div class="acor">
                 <div class="baslık">
                     <h2> Hakkımda </h2>
@@ -46,7 +57,6 @@
                     
                 </div>
             </div>
-
             <div class="acor">
                 <div class="baslık">
                     <h2> İletişim </h2>
@@ -67,10 +77,6 @@
                     <p> Github: <a href="https://github.com/Berilblks"> Github için tıklayınız. </a> </p>
                 </div>
             </div>
-        </div>
-
-        <div class="anasayfa">
-            <a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\anasayfa\index.html"> Anasayfa </a>
         </div>
         <script src="script3.js"></script>
     </body>
