--- a/döviz_page1/döviz.html
+++ b/döviz_page1/döviz.html
@@ -3,9 +3,23 @@
     <head>
         <title> Döviz Çevirici </title>
         <link rel="stylesheet" href="style1.css">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </head>
     <body>
+        <div class="bar">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+        <div class="sidebar">
+            <div class="close">
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+            <ul class="menu">
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\döviz_page1\döviz.html"> Döviz Çevirisi </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\accordion_page3\accordion.html"> Accordion Project </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\weather_page2\weather.html"> Hava Sıcaklığı Dönüştürücü </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\anasayfa\index.html"> Anasayfa </a></li>
+            </ul>
+        </div>
         <div class="kutu">
             <h2> Döviz Çevirici </h2> 
             <div class="sec">
@@ -33,10 +47,6 @@
             <p class="exchangeRate" id="exchangeRate"> </p>
 
         </div>
-        <div class="anasayfa">
-            <a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\anasayfa\index.html"> Anasayfa </a>
-        </div>
-        
         <script src="script1.js"></script>
     </body>
 </html>
