--- a/weather_page2/weather.html
+++ b/weather_page2/weather.html
@@ -3,9 +3,23 @@
     <head>
         <title> Hava Sıcaklığı Çevirici </title>
         <link rel="stylesheet" href="style2.css">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </head>
     <body>
+        <div class="bar">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+        <div class="sidebar">
+            <div class="close">
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+            <ul class="menu">
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\döviz_page1\döviz.html"> Döviz Çevirisi </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\accordion_page3\accordion.html"> Accordion Project </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\weather_page2\weather.html"> Hava Sıcaklığı Dönüştürücü </a></li>
+                <li><a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\anasayfa\index.html"> Anasayfa </a></li>
+            </ul>
+        </div>
         <div class="kutu">
             <h2 class="baslık"> Hava Sıcaklığı Çevirici </h2>
             <div class="değerler">
@@ -22,9 +36,6 @@
                     <input onchange="calculateTemp(event)" type="number" class="tempInput" name="kelvin" id="kelvin" placeholder="Hava kaç derece ?">
                 </div>
             </div>    
-        </div>
-        <div class="anasayfa">
-            <a href="C:\Users\beril\OneDrive\Masaüstü\javascript_test_projeleri\java_çalışma\anasayfa\index.html"> Anasayfa </a>
         </div>
         <script src="script2.js"></script>
     </body>
